syntax = "proto3";
package models;

message Direction {
  double dx = 1;
  double dy = 2;
}

message Player {
  int64 id = 1;
  double x = 2; 
  double y = 3; 
  Direction dir = 4;
  int32 speed = 5;
  int32 battleState = 6;
  int32 lastMoveGmtMillis = 7;
  string name = 8;
  string displayName = 9;
  int32 score = 10;
  bool removed = 11;
  int32 joinIndex = 12;
}

message Treasure {
  int32 id = 1;
  int32 localIdInBattle = 2;
  int32 score = 3;
  double x = 4; 
  double y = 5;
  bool removed = 6;
  int32 type = 7;
}

message Bullet {
  int32 localIdInBattle = 1;
  double linearSpeed = 2;
  double x = 3;
  double y = 4;
  bool removed = 5;
  // Direction dir = 5;
}

message Trap {
  int32 id = 1;
  int32 localIdInBattle = 2;
  int32 type = 3;
  double x = 4; 
  double y = 5;
  bool removed = 6;
}

message SpeedShoes {
  int32 id = 1;
  int32 localIdInBattle = 2;
  double x = 3; 
  double y = 4; 
  bool removed = 5;
  int32 type = 6;
}

message Pumpkin {
    int32 localIdInBattle = 1;
    double linearSpeed = 2;
    double x = 3;
    double y = 4;
    bool removed = 5;
}

message GuardTower {
    int32 id = 1;
    int32 localIdInBattle = 2;
    int32 type = 3;
    double x = 4;
    double y = 5;
    bool removed = 6;
}

message RoomDownsyncFrame {
  int32 id = 1;
  int32 refFrameId = 2;
  map<int32, Player> players = 3;
  int64 sentAt = 4;
  int64 countdownNanos = 5;
  map<int32, Treasure> treasures = 6; 
  map<int32, Trap> traps = 7; 
  map<int32, Bullet> bullets = 8;
  map<int32, SpeedShoes> speedShoes = 9;
  map<int32, Pumpkin> pumpkin = 10;
  map<int32, GuardTower> guardTowers = 11; 
}
